# -olp-wire-canon

./: CHANGELOG.md  README.md  SPEC.md  pyproject.toml  reference.py  verify-chain-node.mjs  verify-disclosure-node.mjs  verify-node.mjs
.github/workflows/: conformance.yml
schemas/: amendment-receipt.schema.json  capture-loss-amendment.schema.json  coherence-input-disclosure.schema.json  envelope.schema.json  trace-receipt.schema.json
scripts/: generate_vectors.py
tests/: __init__.py  test_conformance.py
vectors/valid/: amendment-receipt.json  capture-loss-amendment.json  coherence-input-disclosure.json  coherence-input-receipt.json
